add config vault in docker compose

--- a/src/main/resources/bootstrap.yaml
+++ b/src/main/resources/bootstrap.yaml
@@ -10,5 +10,5 @@ spring:
       scheme: http
       authentication: token
       host: localhost
-      token: s.CoW5ITWFC0WQDDeAk5B88jjv
+      token: d7^&5**iqRQhL*$%GH@3%&D%wME72y^4$q^37t0!w8GnB6vdzH
       port: "8200"
